// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Nest Service Generator Integration - all nest service methods should generate complete service for User model 1`] = `
"
  async getList(query: PaginatedSearchQueryDto) {
    return paginatedSearch({
      prisma: this.prisma,
      model: 'user',
      query,
      fieldsToSearch: [{ name: 'email', type: 'string' }, { name: 'name', type: 'string' }],
      defaultSortBy: 'id',
    });
  }



  async getOne(id: string) {
    const item = await this.prisma.user.findUnique({
      where: { id },
      select: this.getSelectFields(),
    });

    if (!item) {
      throw new NotFoundException('User not found');
    }

    return item;
  }



  async getMany(ids: string[]) {
    const items = await this.prisma.user.findMany({
      where: { id: { in: ids } },
      select: this.getSelectFields(),
    });

    return { data: items };
  }



  async getManyReference(target: string, id: string, query: PaginatedSearchQueryDto) {
    // This is a simplified implementation - you may need to customize based on your relations
    return paginatedSearch({
      prisma: this.prisma,
      model: 'user',
      query,
      fieldsToSearch: [{ name: 'email', type: 'string' }, { name: 'name', type: 'string' }],
      defaultSortBy: 'id',
    });
  }



  async create(dto: CreateUserTgDto) {
    // Check unique constraints
    const existingemail = await this.prisma.user.findFirst({
      where: { email: dto.email },
    });

    if (existingemail) {
      throw new ConflictException('User with this email already exists');
    }

    const item = await this.prisma.user.create({
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }



  async update(id: string, dto: UpdateUserTgDto) {
    await this.getOne(id); // Check if exists

    // Check unique constraints for update
    const existingemail = await this.prisma.user.findFirst({
      where: { email: dto.email, id: { not: id } },
    });

    if (existingemail) {
      throw new ConflictException('User with this email already exists');
    }

    const item = await this.prisma.user.update({
      where: { id },
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }



  async updateMany(ids: string[], dto: UpdateUserTgDto) {
    const items = await Promise.all(
      ids.map(id => this.update(id, dto))
    );

    return { data: items };
  }



  async deleteOne(id: string) {
    await this.getOne(id); // Check if exists

    await this.prisma.user.delete({
      where: { id },
    });

    return { message: 'User deleted successfully' };
  }



  async deleteMany(ids: string[]) {
    const items = await Promise.all(
      ids.map(id => this.deleteOne(id))
    );

    return { data: items };
  }



  private getSelectFields() {
    return {
      id: true,
      email: true,
      name: true,
      role: true,
      createdAt: true,
    };
  }
"
`;

exports[`Nest Service Generator create should generate create method with multiple unique checks 1`] = `
"
  async create(dto: CreateCustomFieldTypeTgDto) {
    // Check unique constraints
    const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }

    const existingusername = await this.prisma.customFieldType.findFirst({
      where: { username: dto.username },
    });

    if (existingusername) {
      throw new ConflictException('CustomFieldType with this username already exists');
    }

    const item = await this.prisma.customFieldType.create({
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator create should generate create method with unique checks 1`] = `
"
  async create(dto: CreateCustomFieldTypeTgDto) {
    // Check unique constraints
    const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }

    const item = await this.prisma.customFieldType.create({
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator create should generate create method without unique checks 1`] = `
"
  async create(dto: CreateCustomFieldTypeTgDto) {
    // Check unique constraints
    

    const item = await this.prisma.customFieldType.create({
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator deleteMany should generate deleteMany method 1`] = `
"
  async deleteMany(ids: string[]) {
    const items = await Promise.all(
      ids.map(id => this.deleteOne(id))
    );

    return { data: items };
  }
"
`;

exports[`Nest Service Generator deleteOne should generate delete method 1`] = `
"
  async deleteOne(id: string) {
    await this.getOne(id); // Check if exists

    await this.prisma.customFieldType.delete({
      where: { id },
    });

    return { message: 'CustomFieldType deleted successfully' };
  }
"
`;

exports[`Nest Service Generator generateUniqueChecks should generate multiple unique checks 1`] = `
"const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }

    const existingusername = await this.prisma.customFieldType.findFirst({
      where: { username: dto.username },
    });

    if (existingusername) {
      throw new ConflictException('CustomFieldType with this username already exists');
    }"
`;

exports[`Nest Service Generator generateUniqueChecks should generate unique checks for create (no isUpdate flag) 1`] = `
"const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }"
`;

exports[`Nest Service Generator generateUniqueChecks should generate unique checks for update 1`] = `
"const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email, id: { not: id } },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }"
`;

exports[`Nest Service Generator generateUniqueChecks should work for different model names 1`] = `
"const existingcode = await this.prisma.customFieldType.findFirst({
      where: { code: dto.code },
    });

    if (existingcode) {
      throw new ConflictException('ProjectType with this code already exists');
    }"
`;

exports[`Nest Service Generator getList should generate getList method 1`] = `
"
  async getList(query: PaginatedSearchQueryDto) {
    return paginatedSearch({
      prisma: this.prisma,
      model: 'CustomFieldType',
      query,
      fieldsToSearch: [{ name: 'name', type: 'string' }, { name: 'description', type: 'string' }],
      defaultSortBy: 'id',
    });
  }
"
`;

exports[`Nest Service Generator getMany should generate getMany method 1`] = `
"
  async getMany(ids: string[]) {
    const items = await this.prisma.customFieldType.findMany({
      where: { id: { in: ids } },
      select: this.getSelectFields(),
    });

    return { data: items };
  }
"
`;

exports[`Nest Service Generator getManyReference should generate getManyReference method 1`] = `
"
  async getManyReference(target: string, id: string, query: PaginatedSearchQueryDto) {
    // This is a simplified implementation - you may need to customize based on your relations
    return paginatedSearch({
      prisma: this.prisma,
      model: 'CustomFieldType',
      query,
      fieldsToSearch: [{ name: 'name', type: 'string' }, { name: 'description', type: 'string' }],
      defaultSortBy: 'id',
    });
  }
"
`;

exports[`Nest Service Generator getOne should generate getOne method 1`] = `
"
  async getOne(id: string) {
    const item = await this.prisma.customFieldType.findUnique({
      where: { id },
      select: this.getSelectFields(),
    });

    if (!item) {
      throw new NotFoundException('CustomFieldType not found');
    }

    return item;
  }
"
`;

exports[`Nest Service Generator getSelectFields should generate getSelectFields method 1`] = `
"
  private getSelectFields() {
    return {
      id: true,
      name: true,
      type: true,
      required: true,
      createdAt: true,
      updatedAt: true,
    };
  }
"
`;

exports[`Nest Service Generator getSelectFields should handle empty fields array 1`] = `
"
  private getSelectFields() {
    return {
      ,
    };
  }
"
`;

exports[`Nest Service Generator update should generate update method with multiple unique checks 1`] = `
"
  async update(id: string, dto: UpdateCustomFieldTypeTgDto) {
    await this.getOne(id); // Check if exists

    // Check unique constraints for update
    const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email, id: { not: id } },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }

    const existingusername = await this.prisma.customFieldType.findFirst({
      where: { username: dto.username, id: { not: id } },
    });

    if (existingusername) {
      throw new ConflictException('CustomFieldType with this username already exists');
    }

    const item = await this.prisma.customFieldType.update({
      where: { id },
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator update should generate update method with unique checks 1`] = `
"
  async update(id: string, dto: UpdateCustomFieldTypeTgDto) {
    await this.getOne(id); // Check if exists

    // Check unique constraints for update
    const existingemail = await this.prisma.customFieldType.findFirst({
      where: { email: dto.email, id: { not: id } },
    });

    if (existingemail) {
      throw new ConflictException('CustomFieldType with this email already exists');
    }

    const item = await this.prisma.customFieldType.update({
      where: { id },
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator update should generate update method without unique checks 1`] = `
"
  async update(id: string, dto: UpdateCustomFieldTypeTgDto) {
    await this.getOne(id); // Check if exists

    // Check unique constraints for update
    

    const item = await this.prisma.customFieldType.update({
      where: { id },
      data: dto,
      select: this.getSelectFields(),
    });

    return item;
  }
"
`;

exports[`Nest Service Generator updateMany should generate updateMany method 1`] = `
"
  async updateMany(ids: string[], dto: UpdateCustomFieldTypeTgDto) {
    const items = await Promise.all(
      ids.map(id => this.update(id, dto))
    );

    return { data: items };
  }
"
`;
